@@ -34,5 +34,7 @@ class ShortcutController(
         shortcutHandler.addShortcut(Shortcut.CONTROL_PAIR, GLFW.GLFW_KEY_2, action = viewController::toggleTurfLayerManual)
         shortcutHandler.addShortcut(Shortcut.CONTROL_PAIR, GLFW.GLFW_KEY_3, action = viewController::toggleObjLayerManual)
         shortcutHandler.addShortcut(Shortcut.CONTROL_PAIR, GLFW.GLFW_KEY_4, action = viewController::toggleMobLayerManual)
+
+        shortcutHandler.addShortcut(GLFW.GLFW_KEY_F5, action = viewController::doResetWindows)
     }
 }
